# cpp_rutils

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml
cmake/: FindVcpkInstall.cmake  dummy-config.cmake.in
cpp_rutils/: always_false.h  assign_m.h  cloneable.h  config.h.in  cpp_rutils.h  data_frame.h  date.h  enum.h  expected.h  format.h  fpu_seh.h  get_loc.h  hashes.h  index.h  intersection.h  is_one_of.h  is_strictly_sorted.h  light_matrix.h  linalg.h  literals.h  memory_size.h  memstream.h  name.h  name_short.h  nearest_value.h  pair.h  partitioner.h  period.h  require.h  scoped_timer.h  secure_deprecate.h  set.h  shared_ptr.h  shared_shared_ptr.h  simple_class.h  slice_vector.h  sort.h  ssize_t.h  string_literal.h  struct_transpose.h  (+11 more)
cpp_rutils/detail/: string_literal.h
cpp_rutils/throwing/: at.h  is_strictly_sorted.h
include/: enum.h  hashes.h  is_one_of.h  is_strictly_sorted.h  literals.h  require.h  shared_ptr.h  to_string.h
include/roost/preprocessor/: dec.hpp  if.hpp
include/roost/preprocessor/logical/: bool.hpp
include/roost/preprocessor/variadic/: size.hpp
roost/preprocessor/: cat.hpp  empty.hpp  stringize.hpp
roost/preprocessor/arithmetic/: dec.hpp  inc.hpp  sub.hpp
roost/preprocessor/arithmetic/detail/: is_maximum_number.hpp  is_minimum_number.hpp  maximum_number.hpp
roost/preprocessor/arithmetic/limits/: dec_256.hpp  inc_256.hpp
roost/preprocessor/comparison/: equal.hpp  less_equal.hpp  not_equal.hpp
roost/preprocessor/comparison/limits/: not_equal_256.hpp
roost/preprocessor/config/: config.hpp  limits.hpp
roost/preprocessor/control/: expr_iif.hpp  if.hpp  iif.hpp  while.hpp
roost/preprocessor/control/detail/: while.hpp
roost/preprocessor/control/detail/limits/: while_256.hpp
roost/preprocessor/control/limits/: while_256.hpp
roost/preprocessor/debug/: error.hpp
roost/preprocessor/detail/: auto_rec.hpp  check.hpp  is_binary.hpp
roost/preprocessor/detail/limits/: auto_rec_256.hpp
roost/preprocessor/facilities/: check_empty.hpp  empty.hpp  expand.hpp  identity.hpp  is_1.hpp  is_empty.hpp  is_empty_variadic.hpp  overload.hpp
roost/preprocessor/facilities/detail/: is_empty.hpp
roost/preprocessor/list/: adt.hpp  fold_left.hpp  fold_right.hpp  for_each.hpp  for_each_i.hpp  reverse.hpp  size.hpp
roost/preprocessor/list/detail/: fold_left.hpp  fold_right.hpp
roost/preprocessor/list/detail/limits/: fold_left_256.hpp  fold_right_256.hpp
roost/preprocessor/list/limits/: fold_left_256.hpp
roost/preprocessor/logical/: and.hpp  bitand.hpp  bitor.hpp  bool.hpp  compl.hpp  not.hpp
roost/preprocessor/logical/limits/: bool_256.hpp
roost/preprocessor/punctuation/: comma.hpp  comma_if.hpp  is_begin_parens.hpp  remove_parens.hpp
roost/preprocessor/punctuation/detail/: is_begin_parens.hpp
roost/preprocessor/repetition/: for.hpp
roost/preprocessor/repetition/detail/: for.hpp
roost/preprocessor/repetition/detail/dmc/: for.hpp
roost/preprocessor/repetition/detail/edg/: for.hpp
roost/preprocessor/repetition/detail/limits/: for_256.hpp
roost/preprocessor/repetition/detail/msvc/: for.hpp
roost/preprocessor/repetition/limits/: for_256.hpp
roost/preprocessor/seq/: elem.hpp  enum.hpp  size.hpp
roost/preprocessor/seq/limits/: elem_256.hpp
roost/preprocessor/tuple/: eat.hpp  elem.hpp  enum.hpp  rem.hpp  size.hpp  to_list.hpp  to_seq.hpp
roost/preprocessor/tuple/detail/: is_single_return.hpp
roost/preprocessor/tuple/limits/: to_list_64.hpp
roost/preprocessor/variadic/: elem.hpp  has_opt.hpp  size.hpp  to_seq.hpp  to_tuple.hpp
roost/preprocessor/variadic/detail/: has_opt.hpp
roost/preprocessor/variadic/limits/: elem_64.hpp  size_64.hpp
tests/: CMakeLists.txt  always_false.cpp  assign_m.cpp  at.cpp  cloneable.cpp  cpp_rutils.cpp  data_frame.cpp  date.cpp  enum.cpp  expected.cpp  file_system.cpp  format.cpp  fpu_seh.cpp  get_loc.cpp  hashes.cpp  index.cpp  intersection.cpp  is_one_of.cpp  is_one_off.cpp  is_strictly_sorted.cpp  light_matrix.cpp  linalg.cpp  literals.cpp  main.cpp  memory_size.cpp  name.cpp  name_short.cpp  nearest_value.cpp  pair.cpp  partitioner.cpp  period.cpp  require.cpp  scoped_timer.cpp  secure_deprecate.cpp  set.cpp  shared_ptr.cpp  shared_shared_ptr.cpp  simple_class.cpp  slice_vector.cpp  sort.cpp  (+14 more)
